--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Header -->
         <header class="header" style=" margin-left: -12px;">
           <nav>
-            <ul>
+            <ul class="ullists">
               <li><a href="#home">Home</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#projects">Projects</a></li>
