--- a/index.html
+++ b/index.html
@@ -142,5 +142,11 @@
         </footer>
         <div class="side-scroller"></div>
       <script src="script.js"></script>
+      <div class="loader-container">
+       <div class="loader">
+            <div class="loading">Loading</div>
+            <div class="spinner"></div>
+        </div>
+    </div> 
 </body>
 </html>
