--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!-- Side Bar -->
         <aside id="sidebar">
             <div class="profile">
-                <img src="https://avatars.githubusercontent.com/u/86460997?s=96&v=4" alt="Profile Picture" class="Imageprofile">
+                <img src="image/myimage.jpg" alt="Profile Picture" class="Imageprofile">
                 <h3>Saurabh Dixit</h3>
                 <p>Full Stack Web Developer</p>
                 <div class="profile-links">
