--- a/index.html
+++ b/index.html
@@ -45,8 +45,12 @@
                         <iconify-icon icon="logos:linkedin"></iconify-icon>
                     </a>
                     <a href="mailto:smartds2550@gmail.com" target="_blank">
-                        <iconify-icon icon="logos:google-gmail"></iconify-icon>
-                        G-mail
+                        <img class="gb_Ec" src="https://ssl.gstatic.com/ui/v1/icons/mail/rfr/logo_gmail_lockup_default_1x_r5.png" 
+                        srcset="https://ssl.gstatic.com/ui/v1/icons/mail/rfr/logo_gmail_lockup_default_1x_r5.png 1x, https://ssl.gstatic.com/ui/v1/icons/mail/rfr/logo_gmail_lockup_default_2x_r5.png 2x " 
+                        alt="" aria-hidden="true" role="presentation" style="width: 86px;
+                        height: 28px;
+                        margin-top: -60px !important;
+                        margin-left: 80px;">
                     </a>
                 </div>
             </div>
