--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <img src="image/myimage.jpg" alt="Profile Picture" class="Imageprofile">
                 <h3>Saurabh Dixit</h3>
                 <p>Full Stack Web Developer</p>
-                <div class="profile-links">
+                <div class="profile-links" style="text-align: justify;">
                     <a href="https://github.com/Saurabhdixit93" target="_blank">
                         <iconify-icon icon="logos:github"></iconify-icon>
                     </a>
