--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
               <li><a href="#contact">Contact</a></li>
             </ul>
           </nav>
+            <!-- Toggle Dark And White -->
+          <div class="theme-toggle">
+            <input type="checkbox" id="toggle">
+            <label for="toggle"></label>
+          </div>  
           <div class="scroll-indicator">
             <div class="scroll-bar"></div>
           </div>          
